refactor: Changed package name

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: easyscript
-description: A new Flutter plugin project.
+name: scriptouch_easyscript
+description: Flutter wrapper for Scriptouch Easyscript Integration (https://scriptel.com/developers/easyscript/).
 version: 1.0.0
 repository: https://github.com/Dream-Orbit/Flutter_scriptel_easy_script.git
 homepage: https://www.dreamorbit.com
